frontend/test/should_fail/defYield_007c.grg
using defYield;

rule t
{
	modify {
		y:B;
	---
		def x:B;
		eval { y = x; }
	}
}

pattern p modify (x:B --- def z:B)
{
	modify {
		eval { x = z; }
	}
}

